# myquant

./: .gitignore  BASELINE_PROMPT.md  FIRST_DATA_SPEC.md  INTRADAY_STORAGE.md  PREBUILD_CHECKLIST.md  README.md  SCALING_PLAN.md  pyproject.toml
configs/: large_universe.toml  project.toml  scaling_plan.toml
src/myquant/: __init__.py
src/myquant/config/: __init__.py  settings.py
src/myquant/data/: __init__.py  dataset.py  download.py  io.py  large_universe_config.py  large_universe_dataset.py  large_universe_download.py  panel_dataset.py  universe.py
src/myquant/features/: __init__.py  market_features.py  targets.py  vix_events.py
src/myquant/models/: __init__.py  patch_transformer.py
src/myquant/planning/: __init__.py  sequence_budget.py
src/myquant/storage/: __init__.py  bar_store.py
src/myquant/training/: __init__.py  artifacts.py  baselines.py  evaluation.py  plots.py  run_baselines.py  run_transformer.py  run_transformer_sweep.py  sequence_data.py
tests/: test_bar_store.py  test_large_universe_dataset.py  test_market_features.py  test_panel_dataset.py  test_sequence_budget.py  test_targets.py  test_training_evaluation.py  test_training_plots.py  test_transformer_schedule.py  test_transformer_shapes.py  test_vix_events.py
