[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "myquant"
version = "0.1.0"
description = "Learning-first SPY quant research project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "duckdb>=1.2.2",
  "lxml>=5.3.1",
  "matplotlib>=3.10.8",
  "nvidia-ml-py>=13.595.45",
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "pyarrow>=19.0.1",
  "scikit-learn>=1.6.1",
  "torch>=2.11.0",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
